--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -59,6 +59,13 @@
   <java-symbol type="array" name="keypressboost_strong_param_value" />
   <java-symbol type="array" name="keypressboost_weak_param_value" />
 
+  <!-- Extended Boosts for QPerformance -->
+
+  <!-- cpu boost on boot -->
+  <java-symbol type="bool" name="config_enableCpuBoostOnBoot" />
+  <java-symbol type="integer" name="onbootboost_duration" />
+  <java-symbol type="array" name="onbootboost_param_value" />
+
   <java-symbol type="bool" name="config_dozeAlwaysOnDisplayEnabledDefault" />
   <java-symbol type="bool" name="config_canForceDozeNotifications" />
 
